--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: trusty # 14.04
 sudo: required
 language: c++
 before_install: sudo apt-get update
-updateaddons:
+addons:
 apt:
   sources:
     - ubuntu-toolchain-r-test
@@ -15,6 +15,7 @@ before_script:
     - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
     - sudo apt-get update
     - sudo apt-get install gcc-6 g++-6
+    - export CXX=“g++-6” CC=“gcc-6”
     - sudo apt-get install ros-indigo-ros-base
     - sudo rosdep init
     - rosdep update
