--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,29 @@
 dist: trusty # 14.04
 sudo: required
+
 language: c++
 before_install: sudo apt-get update
+
 addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - freeglut3-dev # OpenGL
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+        packages:
+            - freeglut3-dev # OpenGL
+            - gcc-6
+            - g++-6 
+            - qt5-default
+            - qtbase5-dev
+            - qt5base-examples
 before_script:
-    - sudo apt-get remove gcc
-    - sudo apt-get remove g++
+    - export CXX=“g++-6” CC=“gcc-6”
     - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
     - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
     - sudo apt-get update
-    - sudo apt-get install gcc-6 g++-6
-    - export CXX=“g++-6” CC=“gcc-6”
     - sudo apt-get install ros-indigo-ros-base
     - sudo rosdep init
     - rosdep update
     - source /opt/ros/indigo/setup.bash
-    - sudo apt-get install qt5-default qt5base-examples
     #- sudo apt-get install ros-indigo-opencv3 ros-indigo-eigen-conversions
 
 script:
