--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ addons:
             - qt5-default
             - qtbase5-dev
 before_script:
-    - export CXX=“g++-6” CC=“gcc-6”
+    - sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc
+    - sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++
+    - export CC=/usr/bin/gcc-6
+    - export CXX=/usr/bin/g++-6
     - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
     - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
     - sudo apt-get update
