--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,15 @@ addons:
             - g++-6 
             - qt5-default
             - qtbase5-dev
+            - libqt5opengl5
+            - libqt5opengl5-dev
 before_script:
+    # Update Compiler
     - sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc
     - sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++
     - export CC=/usr/bin/gcc-6
     - export CXX=/usr/bin/g++-6
+    # install ROS
     - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
     - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
     - sudo apt-get update
@@ -26,6 +30,7 @@ before_script:
     - sudo rosdep init
     - rosdep update
     - source /opt/ros/indigo/setup.bash
+    # Install OpenCV3
     #- sudo apt-get install ros-indigo-opencv3 ros-indigo-eigen-conversions
 
 script:
