--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ CMakeLists.txt.user*
 # build files
 build/
 bin/
+
+# cmake
+CMakeFiles/
+cmake_install.cmake
+CMakeCache.txt
+
+# Eclipse
+.cproject
+.project
+
