updated submodule (reverted from commit 4e00ac27644482a7255b11e155030ecab6abf503)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
-[submodule "src/OpenMapper"]
-	path = src/OpenMapper
+[submodule "OpenMapper"]
+	path = OpenMapper
+	url = https://github.com/OpenMapper/OpenMapper.git
+
+
+[submodule "libs/OpenMapper"]
+	path = libs/OpenMapper
 	url = ../OpenMapper.git
