--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,69 @@
-dist: trusty # 14.04
-sudo: required
+# NOTE:               The build lifecycle on Travis.ci is something like this:
+#    before_install
+#    install
+#    before_script
+#    script
+#    after_success or after_failure
+#    after_script
+#    OPTIONAL before_deploy
+#    OPTIONAL deploy
+#    OPTIONAL after_deploy
 
-language: c++
-before_install: sudo apt-get update
-
-addons:
-    apt:
-        sources:
+matrix:
+  allow_failures:
+    - os:             osx
+  include:
+    - os:             linux
+      dist:           trusty # 14.04
+      sudo:           required
+      language:       c++
+      before_install: sudo apt-get update
+      addons:
+        apt:
+          sources:
             - ubuntu-toolchain-r-test
-        packages:
-            - freeglut3-dev # OpenGL
+          packages:
             - gcc-6
-            - g++-6 
+            - g++-6
+            - cmake
+            - python-dev
+            - python-numpy
+            - libeigen3-dev
+            - freeglut3-dev # OpenGL
             - qt5-default
             - qtbase5-dev
             - libqt5opengl5
             - libqt5opengl5-dev
-before_script:
-    # Update Compiler
-    - sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc
-    - sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++
-    - export CC=/usr/bin/gcc-6
-    - export CXX=/usr/bin/g++-6
-    # install ROS
-    - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
-    - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
-    - sudo apt-get update
-    - sudo apt-get install ros-indigo-ros-base
-    - sudo rosdep init
-    - rosdep update
-    - source /opt/ros/indigo/setup.bash
-    # Install OpenCV3
-    - sudo apt-get install ros-indigo-opencv3 ros-indigo-eigen-conversions
+      before_script:
+            - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
+            - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
+            - sudo apt-get update
+            - sudo apt-get install ros-indigo-ros-base
+            - sudo rosdep init
+            - rosdep update
+            - source /opt/ros/indigo/setup.bash
+            - sudo apt-get install ros-indigo-opencv3 ros-indigo-eigen-conversions
 
-script:
-    # Check versions of gcc, g++ and cmake
-    - gcc -v && g++ -v && cmake --version
-    # Run your build commands next
-    - ./build.sh
+      script:
+        # Export CC and CXX to tell cmake which compiler to use
+        # - export CC=/usr/bin/gcc-6
+        # - export CXX=/usr/bin/g++-6
+        # Check versions of gcc, g++ and cmake
+        - gcc -v && g++ -v && cmake --version
+        # Run your build commands next
+        - ./build.sh
+
+    - os:             osx
+      osx_image:      xcode7.3
+      sudo:           required
+      language:       objective-c
+      before_script:
+        # https://github.com/benlaug/labgen-p/blob/master/.travis.yml
+        - /usr/bin/yes | pip uninstall numpy
+        - brew update
+        - brew tap homebrew/science
+        - brew install opencv3
+        - brew ln opencv3 --force
+        - brew install qt5
+      script:
+        - ./build.sh
