added debian package support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,3 +95,11 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME}_main  PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ../bin/
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ../bin/
     RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ../bin/)
+    
+    
+INSTALL(TARGETS ${PROJECT_NAME}_main DESTINATION openmapper)
+ 
+SET(CPACK_GENERATOR "DEB")
+SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Nicolas Degen & Carlos Gomes")
+
+INCLUDE(CPack)
