--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ SET(CMAKE_AUTOUIC ON)
 
 # Find includes in corresponding build directories.
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
-
+OPTION( PACKAGE_APP "Create packages for the operating system" ON)
 
 ################################
 # Define Dependencies
@@ -95,11 +95,38 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME}_main  PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ../bin/
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ../bin/
     RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ../bin/)
-    
-    
+
+IF(PACKAGE_APP)
+
 INSTALL(TARGETS ${PROJECT_NAME}_main DESTINATION openmapper)
  
 SET(CPACK_GENERATOR "DEB")
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Nicolas Degen & Carlos Gomes")
 
+SET(MAJOR_VERSION "0")
+SET(MINOR_VERSION "1")
+SET(PATCH_VERSION "0")
+
+SET(CPACK_PACKAGE_VENDOR "OpenMapper")
+
+SET(CPACK_PACKAGE_CONTACT "Carlos Gomes gocarlos@ethz.ch") # TODO: change this. 
+set(CPACK_PACKAGE_DESCRIPTION "Mapping Package")
+
+
+SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
+SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
+SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
+SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
+
+
+# Dependencies
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libGL (>=1.0),
+libQtOpenGL (>=4.6.0), libQtCore (>=4.6.0), libQtGui (>=4.6.0)
+")
+
+SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+
 INCLUDE(CPack)
+
+ENDIF()
