some more working for packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,16 @@ SET(CMAKE_AUTOUIC ON)
 
 # Find includes in corresponding build directories.
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
-OPTION( PACKAGE_APP "Create packages for the operating system" ON)
+
+# Set if this software should be packaged. 
+OPTION(PACKAGE_APP "Create packages for the operating system" ON)
 
 ################################
 # Define Dependencies
 ################################
 
-FIND_PACKAGE(OpenCV 3.0.0 REQUIRED)
+FIND_PACKAGE(OpenCV REQUIRED)
+#FIND_PACKAGE(OpenCV 3.0.0 REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
@@ -44,13 +47,8 @@ INCLUDE_DIRECTORIES(
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/libs/OpenMapper/CMakeLists.txt")
 
-SET(OMD_LIB_HEADER_DIR
- ${CMAKE_CURRENT_LIST_DIR}/include
-)
-
-SET(OMD_LIB_SRC_DIR
- ${CMAKE_CURRENT_LIST_DIR}/src
-)
+SET(OMD_LIB_HEADER_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
+SET(OMD_LIB_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
 
 FILE(GLOB_RECURSE OMD_LIB_HEADERS "${OMD_LIB_HEADER_DIR}/*.h")
 FILE(GLOB_RECURSE OMD_LIB_SOURCES "${OMD_LIB_SRC_DIR}/*.cc")
@@ -61,11 +59,9 @@ SET(OMD_LIB_RESOURCES
   ${OMD_LIB_HEADERS}
 )
 
-ADD_EXECUTABLE(${PROJECT_NAME}_main
-  ${OMD_LIB_RESOURCES}
-)
+ADD_EXECUTABLE(${PROJECT_NAME} ${OMD_LIB_RESOURCES})
 
-TARGET_LINK_LIBRARIES(${PROJECT_NAME}_main
+TARGET_LINK_LIBRARIES(${PROJECT_NAME}
   Qt5::Widgets
   Qt5::Core
   Qt5::OpenGL
@@ -80,53 +76,56 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}_main
 
 # Generate proper GUI program on specified platform.
 IF(APPLE)
-  SET_TARGET_PROPERTIES(${PROJECT_NAME}_main PROPERTIES
-    MACOSX_BUNDLE YES
-  )
+  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE YES)
 ELSEIF(UNIX)
   # Nothing special required
 ELSE()
   message(SEND_ERROR "You are on an unsupported platform! (Windows not supported yet)")
 ENDIF(APPLE)
 
-SET_TARGET_PROPERTIES(${PROJECT_NAME}_main  PROPERTIES
+SET_TARGET_PROPERTIES(${PROJECT_NAME}  PROPERTIES
     DEBUG_POSTFIX "_d"
     RUNTIME_OUTPUT_DIRECTORY ../bin/
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ../bin/
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ../bin/
     RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ../bin/)
 
-IF(PACKAGE_APP)
+IF(PACKAGE_APP AND UNIX)
+  INSTALL(TARGETS ${PROJECT_NAME} DESTINATION openmapper)
 
-INSTALL(TARGETS ${PROJECT_NAME}_main DESTINATION openmapper)
+  SET(CPACK_GENERATOR "DEB")
+  SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Nicolas Degen & Carlos Gomes")
+  SET(CPACK_PACKAGE_CONTACT "Carlos Gomes gocarlos@ethz.ch") # TODO: change this. 
+  SET(CPACK_PACKAGE_VENDOR "OpenMapper")
+  set(CPACK_PACKAGE_DESCRIPTION "This App is a Mapping App. It uses Mono-SLAM.")
+
+  SET(MAJOR_VERSION "0")
+  SET(MINOR_VERSION "1")
+  SET(PATCH_VERSION "0")
+  SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
+  SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
+  SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
+  SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
+  SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
+  
+
+  # Dependencies
+  # SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON) # Commented as it uses the ros-lunar-opencv package as dependency instead of libopencv. 
+  SET(CPACK_DEBIAN_PACKAGE_DEPENDS "
+  freeglut3-dev, 
+  qt5-default, 
+  libqt5opengl5-dev, 
+  libopencv-dev (>=2.4.0), 
+  libc6 (>= 2.14), 
+  libgcc1 (>= 1:3.0), l
+  ibgl1, 
+  libqt5core5a (>= 5.7.0), 
+  libqt5gui5 (>= 5.3.0) | libqt5gui5-gles (>= 5.3.0), 
+  libqt5opengl5 (>= 5.0.2) | libqt5opengl5-gles (>= 5.0.2), 
+  libqt5widgets5 (>= 5.0.2), 
+  libstdc++6 (>= 6)")
  
-SET(CPACK_GENERATOR "DEB")
-SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Nicolas Degen & Carlos Gomes")
+  SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
 
-SET(MAJOR_VERSION "0")
-SET(MINOR_VERSION "1")
-SET(PATCH_VERSION "0")
-
-SET(CPACK_PACKAGE_VENDOR "OpenMapper")
-
-SET(CPACK_PACKAGE_CONTACT "Carlos Gomes gocarlos@ethz.ch") # TODO: change this. 
-set(CPACK_PACKAGE_DESCRIPTION "Mapping Package")
-
-
-SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
-SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
-SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
-SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
-SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
-
-
-# Dependencies
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libGL (>=1.0),
-libQtOpenGL (>=4.6.0), libQtCore (>=4.6.0), libQtGui (>=4.6.0)
-")
-
-SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
-
-INCLUDE(CPack)
-
+  INCLUDE(CPack)
 ENDIF()
