--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,21 +1,26 @@
-name:          openmapper-desktop # you probably want to 'snapcraft register <name>'
-version:       '0.1.0' # just for humans, typically '1.2+git' or '1.3.2'
-summary:       Mappig App # 79 char long summary
-description:   |
+name:               openmapper-desktop # you probably want to 'snapcraft register <name>'
+version:            '0.1.0' # just for humans, typically '1.2+git' or '1.3.2'
+summary:            Mappig App # 79 char long summary
+description:        |
   OpenMapper can be used to map various things, from a room to a whole flat.
-grade:         stable # must be 'stable' to release into candidate/stable channels
-confinement:   devmode # use 'strict' once you have the right plugs and slots
+grade:              stable # must be 'stable' to release into candidate/stable channels
+confinement:        devmode # use 'strict' once you have the right plugs and slots
 
 apps:
   desktop-app:
-    command:   openmapper/OpenMapperDesktop
+    command:        openmapper/OpenMapperDesktop
 
 parts:
-  application: # part name can take whatever identifier one likes.
+  application:      # part name can take whatever identifier one likes.
     # See 'snapcraft plugins'
-    plugin:    cmake
+    plugin:         cmake
     build-packages:
       - libeigen3-dev
       - build-essential
       - libopencv-dev
-    after:     [desktop-qt5]
+      - freeglut3-dev # OpenGL
+      - qt5-default
+      - qtbase5-dev
+      - libqt5opengl5
+      - libqt5opengl5-dev
+    after:          [desktop-qt5]
