wip snap packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(CMAKE_AUTOUIC ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # Set if this software should be packaged.
-OPTION(PACKAGE_APP "Create packages for the operating system" ON)
+OPTION(PACKAGE_APP "Create packages for the operating system" OFF)
 
 ################################
 # Define Dependencies
@@ -45,19 +45,14 @@ INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_LIST_DIR}/libs/OpenMapper/thirdparty/slam_engine/ORB_SLAM2/Thirdparty/g2o/g2o/types
 )
 
-INCLUDE("${CMAKE_CURRENT_LIST_DIR}/libs/OpenMapper/CMakeLists.txt")
+INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../../../libs/OpenMapper/CMakeLists.txt")
 
 SET(OMD_LIB_HEADER_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
 SET(OMD_LIB_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
 
 FILE(GLOB_RECURSE OMD_LIB_HEADERS "${OMD_LIB_HEADER_DIR}/*.h")
 FILE(GLOB_RECURSE OMD_LIB_SOURCES "${OMD_LIB_SRC_DIR}/*.cc")
-
-
-SET(OMD_LIB_RESOURCES
-  ${OMD_LIB_SOURCES}
-  ${OMD_LIB_HEADERS}
-)
+SET(OMD_LIB_RESOURCES ${OMD_LIB_SOURCES} ${OMD_LIB_HEADERS})
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${OMD_LIB_RESOURCES})
 
@@ -90,8 +85,9 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME}  PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ../bin/
     RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ../bin/)
 
+INSTALL(TARGETS ${PROJECT_NAME} DESTINATION openmapper)
+
 IF(PACKAGE_APP)
-  INSTALL(TARGETS ${PROJECT_NAME} DESTINATION openmapper)
 
   IF(APPLE)
     # TODO
