--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,19 +1,23 @@
 name:               openmapper-desktop # you probably want to 'snapcraft register <name>'
 version:            '0.1.0' # just for humans, typically '1.2+git' or '1.3.2'
-summary:            Mappig App # 79 char long summary
+summary:            Mapping App # 79 char long summary
 description:        |
   OpenMapper can be used to map various things, from a room to a whole flat.
+  More information can be found here -> https://github.com/OpenMapper/OpenMapperDesktop
 grade:              stable # must be 'stable' to release into candidate/stable channels
 confinement:        devmode # use 'strict' once you have the right plugs and slots
-
+icon:               snap/gui/icon.png
+type:               app
 apps:
-  desktop-app:
-    command:        openmapper/OpenMapperDesktop
+  openmapper-gui:
+    command:        openmapper
+    plugs:          [home, unity7, x11, camera, opengl]
 
 parts:
   application:      # part name can take whatever identifier one likes.
     # See 'snapcraft plugins'
     plugin:         cmake
+    source:         .
     build-packages:
       - libeigen3-dev
       - build-essential
