--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,7 +10,7 @@ icon:               snap/gui/icon.png
 type:               app
 apps:
   openmapper-gui:
-    command:        openmapper
+    command:        desktop-launch /usr/local/bin/OpenMapperDesktop
     plugs:          [home, unity7, x11, camera, opengl]
 
 parts:
@@ -27,4 +27,6 @@ parts:
       - qtbase5-dev
       - libqt5opengl5
       - libqt5opengl5-dev
+    source:         https://github.com/OpenMapper/OpenMapperDesktop.git
+    source-type:    git
     after:          [desktop-qt5]
