--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,17 +1,17 @@
 name:               openmapper-desktop # you probably want to 'snapcraft register <name>'
-version:            '0.1.0' # just for humans, typically '1.2+git' or '1.3.2'
+version:            '0.1.7' # just for humans, typically '1.2+git' or '1.3.2'
 summary:            Mapping App # 79 char long summary
 description:        |
-  OpenMapper can be used to map various things, from a room to a whole flat.
-  More information can be found here -> https://github.com/OpenMapper/OpenMapperDesktop
+  OpenMapper can be used to map various things, from a room to a whole flat.  More information can be found here -> https://github.com/OpenMapper/OpenMapperDesktop
 grade:              stable # must be 'stable' to release into candidate/stable channels
 confinement:        devmode # use 'strict' once you have the right plugs and slots
 icon:               snap/gui/icon.png
 type:               app
 apps:
   openmapper-gui:
-    command:        desktop-launch /usr/local/bin/OpenMapperDesktop
+    command:        desktop-launch ${SNAP}/bin/OpenMapperDesktop
     plugs:          [home, unity7, x11, camera, opengl]
+architectures:      [amd64]
 
 parts:
   application:      # part name can take whatever identifier one likes.
@@ -26,4 +26,11 @@ parts:
       - qtbase5-dev
       - libqt5opengl5
       - libqt5opengl5-dev
+      - libgl1
+      - libqt5core5a
+      - libqt5gui5
+      - libqt5widgets5
+      - libstdc++6
+      - libqt5dbus5
+      - libopencv-calib3d-dev
     after:          [desktop-qt5]
