--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - gcc-6
-            - g++-6
+            - gcc-7
+            - g++-7
             - cmake
             - python-dev
             - python-numpy
@@ -46,10 +46,12 @@ matrix:
 
       script:
         # Export CC and CXX to tell cmake which compiler to use
-        # - export CC=/usr/bin/gcc-6
-        # - export CXX=/usr/bin/g++-6
+        - export CC=/usr/bin/gcc-7
+        - export CXX=/usr/bin/g++-7
         # Check versions of gcc, g++ and cmake
         - gcc -v && g++ -v && cmake --version
+        - $CC --version
+        - $CXX --version
         # Run your build commands next
         - ./build.sh
 
