--- a/.travis.yml
+++ b/.travis.yml
@@ -67,5 +67,7 @@ matrix:
         - brew install opencv3
         - brew ln opencv3 --force
         - brew install qt5
+        - export PATH="/usr/local/opt/qt/bin:$PATH"' >> ~/.bash_profile
+
       script:
         - ./build.sh
