--- a/snap/gui/openmapper-gui.desktop
+++ b/snap/gui/openmapper-gui.desktop
@@ -4,7 +4,7 @@ Name=OpenMapperDesktop
 GenericName=OpenMapperDesktop
 Comment=A mapping app for the Ubuntu Desktop
 Keywords=mapping;slam;
-Exec=openmapper
+Exec=OpenMapperDesktop
 Icon=${SNAP}/meta/gui/icon.png
 Terminal=true
 X-Ubuntu-Touch=false
