--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,10 +1,14 @@
-name:               openmapper-desktop # you probably want to 'snapcraft register <name>'
-version:            '0.1.7' # just for humans, typically '1.2+git' or '1.3.2'
-summary:            Mapping App # 79 char long summary
+name:               openmapper-desktop
+# just for humans, typically '1.2+git' or '1.3.2'
+version:            '0.1.7'
+# 79 char long summary
+summary:            Mapping App
 description:        |
   OpenMapper can be used to map various things, from a room to a whole flat.  More information can be found here -> https://github.com/OpenMapper/OpenMapperDesktop
-grade:              stable # must be 'stable' to release into candidate/stable channels
-confinement:        devmode # use 'strict' once you have the right plugs and slots
+# must be 'stable' to release into candidate/stable channels
+grade:              stable
+# use 'strict' once you have the right plugs and slots
+confinement:        devmode
 icon:               snap/gui/icon.png
 type:               app
 apps:
@@ -14,9 +18,12 @@ apps:
 architectures:      [amd64]
 
 parts:
-  application:      # part name can take whatever identifier one likes.
+# part name can take whatever identifier one likes.
+  application:
     source-type:    git
     plugin:         cmake
+    configflags:
+      - -DCREATE_SNAP_APP=ON
     build-packages:
       - libeigen3-dev
       - build-essential
