--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,19 +1,29 @@
-name:               openmapper-desktop # you probably want to 'snapcraft register <name>'
-version:            '0.1.0' # just for humans, typically '1.2+git' or '1.3.2'
-summary:            Mappig App # 79 char long summary
+name:               openmapper-desktop
+# just for humans, typically '1.2+git' or '1.3.2'
+version:            '0.1.11'
+# 79 char long summary
+summary:            Mapping App
 description:        |
-  OpenMapper can be used to map various things, from a room to a whole flat.
-grade:              stable # must be 'stable' to release into candidate/stable channels
-confinement:        devmode # use 'strict' once you have the right plugs and slots
-
+  OpenMapper can be used to map various things, from a room to a whole flat.  More information can be found here -> https://github.com/OpenMapper/OpenMapperDesktop
+# must be 'stable' to release into candidate/stable channels
+grade:              stable
+# use 'strict' once you have the right plugs and slots
+confinement:        devmode
+icon:               snap/gui/icon.png
+type:               app
 apps:
-  desktop-app:
-    command:        openmapper/OpenMapperDesktop
+  openmapper:
+    command:        desktop-launch ${SNAP}/openmapper/OpenMapperDesktop
+    plugs:          [home, unity7, x11, camera, opengl]
+architectures:      [amd64]
 
 parts:
-  application:      # part name can take whatever identifier one likes.
-    # See 'snapcraft plugins'
+# part name can take whatever identifier one likes.
+  openmapper:
+    source-type:    git
     plugin:         cmake
+    configflags:
+      - -DCREATE_SNAP_APP=ON
     build-packages:
       - libeigen3-dev
       - build-essential
@@ -21,6 +31,14 @@ parts:
       - freeglut3-dev # OpenGL
       - qt5-default
       - qtbase5-dev
+      - qtbase5-dev-tools
       - libqt5opengl5
       - libqt5opengl5-dev
-    after:          [desktop-qt5]
+      - libgl1
+      - libqt5core5a
+      - libqt5gui5
+      - libqt5widgets5
+      - libstdc++6
+      - libqt5dbus5
+      - libopencv-calib3d-dev
+    after:          [desktop-qt5, indicator-qt5]
