--- a/snap/gui/openmapper.desktop
+++ b/snap/gui/openmapper.desktop
@@ -1,13 +1,14 @@
 [Desktop Entry]
 Type=Application
-Name=OpenMapperDesktop
-GenericName=OpenMapperDesktop
+Name=OpenMapper
+GenericName=OpenMapper
 Comment=A mapping app for the Ubuntu Desktop
 Keywords=mapping;slam;
-Exec=OpenMapperDesktop
+Exec=openmapper-desktop.openmapper
 Icon=${SNAP}/meta/gui/icon.png
 Terminal=true
 X-Ubuntu-Touch=false
 X-Ubuntu-Default-Department-ID=accessories
 X-Ubuntu-Splash-Color=#F5F5F5
 StartupNotify=true
+
