--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -24,6 +24,8 @@ parts:
     plugin:         cmake
     configflags:
       - -DCREATE_SNAP_APP=ON
+    # A list of Ubuntu packages to be installed on the host to aid in building the part. These packages will not go into the final snap.
+    after:          [desktop-qt5]
     build-packages:
       - libeigen3-dev
       - build-essential
@@ -41,4 +43,16 @@ parts:
       - libstdc++6
       - libqt5dbus5
       - libopencv-calib3d-dev
-    after:          [desktop-qt5, indicator-qt5]
+  desktop-qt5:
+    stage-packages:
+      - libxkbcommon0
+      - ttf-ubuntu-font-family
+      - dmz-cursor-theme
+      - light-themes
+      - shared-mime-info
+      - libqt5gui5
+      - libgdk-pixbuf2.0-0
+      - libqt5svg5 # for loading icon themes which are svg
+      - locales-all
+    # A set of Ubuntu packages to be downloaded and unpacked to join the part before it’s built. Note that these packages are not installed on the host. Like the rest of the part, all files from these packages will make it into the final snap unless filtered out via the prime keyword.
+    # stage-packages:
