--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,7 +14,7 @@ type:               app
 apps:
   openmapper:
     command:        desktop-launch ${SNAP}/openmapper/OpenMapperDesktop
-    plugs:          [home, unity7, x11, camera, opengl]
+    plugs:          [home, unity7, x11, camera, opengl, network-control, account-control,  raw-usb]
 architectures:      [amd64]
 
 parts:
